--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,3 +17,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_IMSA_TUTORING }}'
           channelId: live
           projectId: imsa-tutoring
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
