--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-firebaseui": "^6.0.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "use-deep-compare-effect": "^1.8.1"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.2"
