--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.6",
+    "@types/firebase": "^3.2.1",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -19,10 +20,10 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "firebase": "^9.23.0",
-    "next": "13.4.8",
+    "next": "^13.4.8",
     "postcss": "8.4.24",
     "react": "^18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-firebaseui": "^6.0.0",
     "typescript": "5.1.6",
